@@ -46,6 +46,9 @@ Enhancement
   * Made Reader.check_slice_indices a public method (Issue #604)
   * analysis.helanal.helanal_main() now returns results as dict
   * Added keyword to update selection every frame in density calculation (Issue #584) 
+  * New keywords start, stop, step for density.density_from_Universe()
+    to slice a trajectory.
+
 
 Changes
 
